fix: 🔧 broken links when not deploying from document root

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -9,7 +9,7 @@
 
       <div class="menu">
         {{ range .Site.Params.menu }}
-        <a class="page-link" href="{{ .slug }}">{{ .name }}</a>
+        <a class="page-link" href="{{ .slug | absURL }}">{{ .name }}</a>
         {{ end }}
       </div>
     </nav>
