--- a/layouts/partials/wechat-widget.html
+++ b/layouts/partials/wechat-widget.html
@@ -5,7 +5,7 @@
     Find me on WeChat with the ID <strong>{{ .value }}</strong>, or scan my QR code:
   </p>
 
-  <img src="{{ "/img/wechat-qr-code.png" | absURL }}" alt="QR code" id="qr-code" />
+  <img src="{{ "img/wechat-qr-code.png" | absURL }}" alt="QR code" id="qr-code" />
 </div>
     {{ break }}
   {{ end }}
