--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -32,4 +32,4 @@ $on-laptop: 800px;
 }
 
 // Import partials from `sass_dir` (defaults to `_sass`)
-@import "base", "layout", "site", "work", "blog", "post", "404";
+@import "base", "layout", "site", "work", "blog", "post", "404", "search";
