--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,7 +6,7 @@
   <!-- Primary Meta Tags -->
   <title>{{ .Site.Title }}</title>
   <meta name="title" content="{{ .Title }}"/>
-  <meta name="author" content="{{ .Site.Author }}" />
+  <meta name="author" content="{{ .Site.Author.name }}" />
   <meta name="description" content="{{ .Description }}"/>
 
   <!-- Open Graph -->
