--- a/layouts/work/list.html
+++ b/layouts/work/list.html
@@ -15,7 +15,7 @@
     />
     {{ else }}
     <img
-      src="{{ 'img/work/water.png' | absURL }}"
+      src="{{ "img/work/water.png" | absURL }}"
       alt="water pattern"
       class="work-bubble"
     />
@@ -38,7 +38,7 @@
     />
     {{ else }}
     <img
-      src="{{ 'img/work/water.png' | absURL }}"
+      src="{{ "img/work/water.png" | absURL }}"
       alt="water pattern"
       class="work-bubble"
     />
@@ -66,7 +66,7 @@
     />
     {{ else }}
     <img
-      src="{{ 'img/work/water.png' | absURL }}"
+      src="{{ "img/work/water.png" | absURL }}"
       alt="water pattern"
       class="work-bubble"
     />
