fix: remove deprecated site attributes

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,7 +6,7 @@
   <!-- Primary Meta Tags -->
   <title>{{ .Site.Title }}</title>
   <meta name="title" content="{{ .Title }}"/>
-  <meta name="author" content="{{ .Site.Author.name }}" />
+  <meta name="author" content="{{ .Site.Params.Author.name }}" />
   <meta name="description" content="{{ .Description }}"/>
 
   <!-- Open Graph -->
@@ -24,7 +24,7 @@
 
   {{/*<link rel="stylesheet" href="{{ "/assets/css/main.css" | absURL }}">*/}}
   {{ $scss := resources.Get "sass/main.scss" }}
-  {{ $style := $scss | resources.ExecuteAsTemplate "main.scss" . | resources.ToCSS | resources.Minify | resources.Fingerprint }}
+  {{ $style := $scss | resources.ExecuteAsTemplate "main.scss" . | css.Sass | resources.Minify | resources.Fingerprint }}
   <link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
   <link rel="canonical" href="{{ .Permalink }}">
   <link rel="shortcut icon" href="{{ "/favicon.ico" | absURL }}" type="image/x-icon"/>
